src/objects/Defect_Cause__c.object
<CustomObject>
    <description>This is junction object between Defect and Cause objects.</description>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <referenceTo>Cause__c</referenceTo>
        <relationshipLabel>Defect Causes</relationshipLabel>
        <relationshipName>Defect_Causes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Defect_Cause_id__c</fullName>
        <label>Defect Cause id</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Defect Causes</relationshipLabel>
        <relationshipName>Defect_Causes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Defect Cause</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Defect_cause_view</fullName>
        <columns>NAME</columns>
        <columns>Cause__c</columns>
        <columns>Defect__c</columns>
        <filterScope>Everything</filterScope>
        <label>Defect cause view</label>
    </listViews>
    <nameField>
        <displayFormat>DCN-{0000}</displayFormat>
        <label>Defect Cause Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defect Causes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>